fix: ignore null JSON properties